2. Local-Variable Type Inference [#296362]